# stockprogramma

./: README.rst  gegevens.txt  index.py  pyproject.toml  requirements.txt
stockprogramma/: .env  blueprint.py  main.py
stockprogramma/database/: db.py
stockprogramma/database/models/: product.py  users.py
stockprogramma/resources/: auth.py  errors.py  product.py  route.py  user.py
stockprogramma/static/: style.css
stockprogramma/templates/: add_product.html  base.html  fetch.html  home.html  login.html  signup.html
tests/: test_stockprogramma.py
