[tool.poetry]
name = "stockprogramma"
version = "0.1.0"
description = ""
authors = ["weetnix <seppevangestel53@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
flask-mongoengine = "^1.0.0"
Flask-RESTful = "^0.3.9"
Flask-Bcrypt = "^1.0.0"
Flask-JWT-Extended = "^4.3.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
